--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pandas>=1.3.0
-numpy>=1.20.0
+requests>=2.25.1
+beautifulsoup4>=4.9.3
+pandas>=1.2.4
+numpy>=1.20.2
+certifi>=2021.10.8
+urllib3>=1.26.7
 scikit-learn>=0.24.0
 tqdm>=4.62.0
 matplotlib>=3.4.0
 seaborn>=0.11.0
-requests>=2.26.0
-beautifulsoup4>=4.9.3
-urllib3>=1.26.0
