--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ scikit-learn>=0.24.0
 tqdm>=4.62.0
 matplotlib>=3.4.0
 seaborn>=0.11.0
+torch>=1.8.0
+transformers>=4.5.0
+accelerate>=0.20.0
+datasets>=2.10.0
+tokenizers>=0.13.0
