清理 bert-base-chinese 目录

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,14 @@ task2/models/bert-base-chinese/
 task2/models/tokenizer/
 !task2/models/best_model.pth
 
+# 忽略特定模型文件夹
+task2/models/bert-base-chinese/**
+task2/models/bert-base-chinese/
+task2/models/tokenizer/
+
+# 忽略所有 .pth 文件，但保留特定文件
+*.pth
+!task2/models/best_model.pth
 # 模型文件和数据集（根据需要配置）
 **/*.pth
 *.pt
